# gptGrok2api

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
api/: accounts.py  accounts_test.py  app.py  grok_oauth.py  register.py  register_test.py  system.py
captcha-solver/: .env.example  README.md  server.py
captcha-solver/common/: browser.py
captcha-solver/datadome/: _selfcheck.py  solve.py
captcha-solver/perimeterx/: README.md  solve.py
captcha-solver/turnstile/: README.md  solve.py  solve_test.py
deploy/launchd/: com.chatgpt2api.app.plist.example  com.chatgpt2api.captcha-solver.plist.example
deploy/systemd/: captcha-solver.service.example  chatgpt2api.service.example
docs/: AUTO_UPLOAD_SUB2API_CPA.md  BEGINNER_LOCAL_SETUP.md  BEGINNER_UBUNTU_SETUP.md  TROUBLESHOOTING_LOG_EXAMPLES.md
services/: cpa_service.py  provider_account_stats.py  provider_account_stats_test.py  register_service.py  register_service_grok2api_test.py  register_service_test.py  sub2api_service.py  xai_cli_oauth_service.py  xai_cli_oauth_service_test.py  xai_cli_oauth_store.py  xai_cli_oauth_store_test.py  xai_device_oauth_protocol.py  xai_device_oauth_protocol_test.py  xai_reference_pkce_protocol.py  xai_reference_pkce_protocol_test.py
services/register/: grok2api_account_client.py  grok_account_store.py  grok_account_store_test.py  grok_protocol.py  grok_protocol_test.py  mail_provider.py  mail_provider_test.py  openai_register.py  openai_register_test.py
web-vue/: package-lock.json  package.json
web-vue/src/api/: accounts.ts  grokAccounts.ts  grokOAuthAccounts.ts  stats.ts  (+1 more)
(+21 files in other folders)
