[project]
name = "chatgpt2api"
version = "1.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.0",
    "aiohttp-socks>=0.11.0",
    "aiomysql>=0.2.0",
    "asyncpg>=0.31.0",
    "certifi>=2025.10.5",
    "cryptography>=48.0.1",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.0",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "idna>=3.15",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "pillow>=12.2.0",
    "pybase64>=1.4.3",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.31",
    "redis>=6.4.0",
    "tiktoken>=0.12.0",
    "tomli-w>=1.2.0",
    "urllib3>=2.7.0",
    "uvicorn>=0.44.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "gitpython>=3.1.0",
    "requests>=2.33.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
